--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,9 @@ services:
 
     web:
         build: .
-        command: bash -c "python ./server/manage.py migrate && python ./server/manage.py runserver 0.0.0.0:8000"
+        environment:
+          - SECRET_KEY = ticket_manager
+        command: bash -c "python ./server/manage.py migrate && ./server/manage.py makemigrations && python ./server/manage.py runserver 0.0.0.0:8000"
         volumes:
         - .:/server
         ports:
