update json files for easy testing

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
         build: .
         environment:
           - SECRET_KEY = ticket_manager
-        command: bash -c "python ./server/manage.py migrate && ./server/manage.py makemigrations && python ./server/manage.py runserver 0.0.0.0:8000"
+        command: bash -c "python ./server/manage.py migrate && python ./server/manage.py makemigrations && python ./server/manage.py runserver 0.0.0.0:8000"
         volumes:
         - .:/server
         ports:
